--- a/.github/workflows/cron_1.yml
+++ b/.github/workflows/cron_1.yml
@@ -4,6 +4,12 @@ on:
   schedule:
     #0 */2 * * *
     - cron: "0 * * * *"
+  
+  workflow_dispatch:
+    inputs:
+      token:
+        description: 'secret token'
+        required: true
 
 jobs:
   deploy:
