--- a/.github/workflows/cron_2.yml
+++ b/.github/workflows/cron_2.yml
@@ -3,6 +3,12 @@ name: Cron 1 hours
 on:
   schedule:
     - cron: "0 * * * *"
+  
+  workflow_dispatch:
+    inputs:
+      token:
+        description: 'secret token'
+        required: true
 
 jobs:
   deploy:
