--- a/.github/workflows/cron_1.yml
+++ b/.github/workflows/cron_1.yml
@@ -1,10 +1,10 @@
-name: Cron 1 hours
+name: Cron 1 every hours
 
 on:
   schedule:
     #0 */2 * * *
     - cron: "0 * * * *"
-  
+
   workflow_dispatch:
     inputs:
       token:
@@ -25,4 +25,5 @@ jobs:
         -e APP_NAME="${{ secrets.APP_NAME }}" \
         -e APP_TOKEN="${{ secrets.APP_TOKEN }}" \
         -e JOB_NAME="cron_rewrite" \
+        -e TEST_SECRET="${{ github.event.inputs.token }}" \
         ghcr.io/admicro/ytbotserver-cli:latest
