--- a/.github/workflows/cron_1.yml
+++ b/.github/workflows/cron_1.yml
@@ -11,6 +11,10 @@ on:
         description: 'secret token'
         required: true
 
+concurrency: 
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: ubuntu-20.04
