--- a/.github/workflows/cron_1.yml
+++ b/.github/workflows/cron_1.yml
@@ -16,7 +16,7 @@ concurrency:
   
 jobs:
   deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     timeout-minutes: 720
     steps:
     - uses: actions/checkout@master
