--- a/.github/workflows/cron_1.yml
+++ b/.github/workflows/cron_1.yml
@@ -13,7 +13,7 @@ on:
 
 concurrency: 
   group: ${{ github.workflow }}-${{ github.ref }}
-  
+  cancel-in-progress: true
 jobs:
   deploy:
     runs-on: ubuntu-latest
