--- a/.github/workflows/cron_2.yml
+++ b/.github/workflows/cron_2.yml
@@ -11,7 +11,8 @@ on:
 
 concurrency: 
   group: ${{ github.workflow }}-${{ github.ref }}
-
+  cancel-in-progress: true
+  
 jobs:
   deploy:
     runs-on: ubuntu-latest
