--- a/.github/workflows/job_trans.yml
+++ b/.github/workflows/job_trans.yml
@@ -20,8 +20,19 @@ jobs:
     steps:
     - uses: actions/checkout@master
     
-    - name: Run task
-      if: success()
+    - name: Check current job
+      id: check_run
+      run: |
+        out=$(wget -qO- --no-check-certificate --no-cache --timeout=18000000 --tries=3 "https://api.github.com/repos/${{github.repository}}/actions/workflows/cron_1.yml/runs")
+        if [[ "$out" == *'"queued"'* || "$out" == *'"in_progress"'* ]]; then
+          echo ::set-output name=status::running
+        else
+          echo ::set-output name=status::no_running
+        fi
+      continue-on-error: true
+
+    - name: Run cron rewrite
+      if: success() && steps.check_run.outputs.status == 'no_running'
       run: |
         docker run \
         -e TASK="${{ github.event.inputs.task }}" \
