--- a/.github/workflows/cron_1.yml
+++ b/.github/workflows/cron_1.yml
@@ -31,6 +31,11 @@ jobs:
           echo ::set-output name=status::no_running
         fi
       continue-on-error: true
+    
+    - name: Dump steps context
+      env:
+        STEPS_CONTEXT: ${{ toJson(steps) }}
+      run: echo "$STEPS_CONTEXT"
       
     - name: Run cron rewrite
       if: steps.check_run.outputs.status == 'no_running'
