--- a/.github/workflows/cron_1.yml
+++ b/.github/workflows/cron_1.yml
@@ -25,7 +25,10 @@ jobs:
       id: check_run
       run: |
         out=$(wget -qO- --no-check-certificate --no-cache --timeout=18000000 --tries=3 "https://api.github.com/repos/${{github.repository}}/actions/workflows/cron_1.yml/runs")
-        if [[ "$out" == *'"queued"'* || "$out" == *'"in_progress"'* ]]; then
+        n=$(echo "$out" | grep -c '"in_progress"')
+        n1=$(echo "$out" | grep -c '"queued"')
+        num=`expr $n + $n1`
+        if [[ $num -gt 1 ]]; then
           echo ::set-output name=status::running
         else
           echo ::set-output name=status::no_running
