--- a/.github/workflows/cron_1.yml
+++ b/.github/workflows/cron_1.yml
@@ -33,7 +33,8 @@ jobs:
         else
           echo ::set-output name=status::no_running
         fi
-      continue-on-error: true
+        echo "finish check"
+      continue-on-error: false
     
     - name: Dump steps context
       env:
