--- a/.github/workflows/cron_1.yml
+++ b/.github/workflows/cron_1.yml
@@ -25,9 +25,9 @@ jobs:
       id: check_run
       run: |
         out=$(wget -qO- --no-check-certificate --no-cache --timeout=18000000 --tries=3 "https://api.github.com/repos/${{github.repository}}/actions/workflows/cron_1.yml/runs")
-        n=$(echo "$out" | grep -c '"in_progress"')
-        n1=$(echo "$out" | grep -c '"queued"')
-        num=$((n+n1))
+        #n=$(echo "$out" | grep -c '"in_progress"')
+        #n1=$(echo "$out" | grep -c '"queued"')
+        #num=$((n+n1))
         
         echo "finish check $num"
       continue-on-error: false
