--- a/.github/workflows/cron_1.yml
+++ b/.github/workflows/cron_1.yml
@@ -25,12 +25,12 @@ jobs:
       id: check_run
       run: |
         out=$(wget -qO- --no-check-certificate --no-cache --timeout=18000000 --tries=3 "https://api.github.com/repos/${{github.repository}}/actions/workflows/cron_1.yml/runs");
-        #n=$(echo "$out" | grep -c '"in_progress"');
+        echo "$out" | grep -c '"in_progress"';
         echo "$out" | grep -c '"queued"';
         #num=$((n+n1));
         
         echo "finish check "
-      continue-on-error: false
+      continue-on-error: true
     
     - name: Dump steps context
       env:
