--- a/.github/workflows/cron_1.yml
+++ b/.github/workflows/cron_1.yml
@@ -2,6 +2,7 @@ name: Cron 1 every hours
 
 on:
   schedule:
+    #0 */2 * * *
     - cron: "0 * * * *"
 
   workflow_dispatch:
@@ -10,6 +11,9 @@ on:
         description: 'secret token'
         required: true
 
+#concurrency: 
+#  group: ${{ github.workflow }}-${{ github.ref }}
+#  cancel-in-progress: true
 
 jobs:
   deploy:
@@ -18,28 +22,8 @@ jobs:
     steps:
     - uses: actions/checkout@master
     
-    - name: Check current job
-      id: check_run
-      run: |
-        set +e
-        out=$(wget -qO- --no-check-certificate --no-cache --timeout=18000000 --tries=3 "https://api.github.com/repos/${{github.repository}}/actions/workflows/cron_1.yml/runs")
-        n=$(echo "$out" | grep -c '"in_progress"')
-        n1=$(echo "$out" | grep -c '"queued"')
-        num=$((n+n1))
-        if [[ $num -gt 1 ]]; then
-          echo ::set-output name=status::running
-        else
-          echo ::set-output name=status::no_running
-        fi
-      continue-on-error: true
-
-    - name: Dump steps context
-      env:
-        STEPS_CONTEXT: ${{ toJson(steps) }}
-      run: echo "$STEPS_CONTEXT"
-
-    - name: Run cron rewrite
-      if: success() && steps.check_run.outputs.status == 'no_running'
+    - name: Run cron
+      if: success()
       run: |
         docker run \
         -e APP_NAME="${{ secrets.APP_NAME }}" \
