--- a/.github/workflows/cron_2.yml
+++ b/.github/workflows/cron_2.yml
@@ -4,12 +4,15 @@ on:
   schedule:
     - cron: "0 * * * *"
 
-
   workflow_dispatch:
     inputs:
       token:
         description: 'secret token'
         required: true
+
+#concurrency: 
+#  group: ${{ github.workflow }}-${{ github.ref }}
+#  cancel-in-progress: true
 
 jobs:
   deploy:
@@ -18,27 +21,8 @@ jobs:
     steps:
     - uses: actions/checkout@master
     
-    - name: Check current job
-      id: check_run
-      run: |
-        out=$(wget -qO- --no-check-certificate --no-cache --timeout=18000000 --tries=3 "https://api.github.com/repos/${{github.repository}}/actions/workflows/cron_2.yml/runs")
-        n=$(echo "$out" | grep -c '"in_progress"' || true)
-        n1=$(echo "$out" | grep -c '"queued"' || true)
-        num=$((n+n1))
-        if [[ $num -gt 1 ]]; then
-          echo ::set-output name=status::running
-        else
-          echo ::set-output name=status::no_running
-        fi
-      continue-on-error: true
-
-    - name: Dump steps context
-      env:
-        STEPS_CONTEXT: ${{ toJson(steps) }}
-      run: echo "$STEPS_CONTEXT"
-
     - name: Run cron
-      if: success() && steps.check_run.outputs.status == 'no_running'
+      if: success()
       run: |
         docker run \
         -e APP_NAME="${{ secrets.APP_NAME }}" \
